sort by most recent, also fixed weird spacing

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 .videoContainerHome {
     display: flex;
     flex-direction: column;
+		max-width: 280px;
     /* background-color: cadetblue; */
 		/* padding: 2rem; */
 }
@@ -42,7 +43,7 @@
 .thumbnailImgHome {
     width: 100%;
     height: 100%;
-    min-width: 250px;
+    min-width: 280px;
     min-height: 150px;
     background-color: #AAA;
 }
